--- a/static/global.css
+++ b/static/global.css
@@ -1,7 +1,11 @@
+html {
+	font-size: 10px;
+}
+
 body {
 	margin: 0;
-	font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-	font-size: 14px;
+	font-family: Heebo, Roboto, Helvetica Neue, sans-serif;
+	font-size: 1.4rem;
 	line-height: 1.5;
 	color: #333;
 }
@@ -31,6 +35,6 @@ code {
 
 @media (min-width: 400px) {
 	body {
-		font-size: 16px;
+		font-size: 1.6rem;
 	}
 }
