--- a/site/src/components/layout.css
+++ b/site/src/components/layout.css
@@ -43,10 +43,13 @@ template {
 a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
+  text-decoration: none;
+  color: #000;
 }
 a:active,
 a:hover {
   outline-width: 0;
+  color: #cd3341;
 }
 abbr[title] {
   border-bottom: none;
@@ -243,7 +246,7 @@ h2 {
   margin-left: 0;
   margin-right: 0;
   margin-top: 0;
-  padding-bottom: 0;
+  padding-bottom: 1.5rem;
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
@@ -269,7 +272,7 @@ h3 {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
-  font-size: 1.38316rem;
+  font-size: 2rem;
   line-height: 1.1;
 }
 h4 {
@@ -280,7 +283,7 @@ h4 {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  margin-bottom: 1.45rem;
+  margin-bottom: 1rem;
   color: inherit;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
