--- a/site/src/components/layout.css
+++ b/site/src/components/layout.css
@@ -3,6 +3,7 @@ html {
   font-size: 10px;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  scroll-behavior: smooth;
 }
 body {
   margin: 0;
@@ -268,8 +269,7 @@ h3 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Coda", cursive;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 2rem;
@@ -389,6 +389,7 @@ p {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
+  font-size: 1.5rem;
 }
 figure {
   margin-left: 0;
