--- a/site/src/components/layout.css
+++ b/site/src/components/layout.css
@@ -620,6 +620,62 @@ pre tt:before,
 pre tt:after {
   content: "";
 }
+
+form div {
+  position: relative;
+  margin: 4rem 0;
+}
+
+label {
+  position: absolute;
+  top: 0;
+  font-size: 2rem;
+  margin: 1rem;
+  padding: 0 10px;
+  background-color: transparent;
+  -webkit-transition: top 0.2s ease-in-out, font-size 0.2s ease-in-out;
+  transition: top 0.2s ease-in-out, font-size 0.2s ease-in-out;
+}
+
+.active {
+  top: -2.5rem;
+  font-size: 1.5rem;
+}
+
+input[type="text"],
+input[type="email"] {
+  width: 100%;
+  padding: 1rem 2rem;
+  border: 1px solid white;
+  font-size: 1.8rem;
+  background-color: white;
+}
+
+input[type="textarea"] {
+  width: 100%;
+  padding: 2rem;
+  border: 1px solid white;
+  font-size: 20px;
+  background-color: white;
+}
+
+input[type="text"]:focus,
+input[type="textarea"]:focus {
+  outline: none;
+}
+
+input[type="button"],
+input[type="submit"],
+input[type="reset"] {
+  background-color: #21263d;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
 /* @media only screen and (max-width: 480px) {
   html {
     font-size: 100%;
